LPS-55079 revert min-height as we will fix the issue in JS. Set overflow as visible to override that of aui.css because auto will trigger resize hanldes in IE.

--- a/modules/frontend/frontend-themes-web/src/META-INF/resources/html/themes/classic/_diffs/css/custom_common.css
+++ b/modules/frontend/frontend-themes-web/src/META-INF/resources/html/themes/classic/_diffs/css/custom_common.css
@@ -1123,7 +1123,7 @@ body.yui3-skin-sam .yui3-widget-mask {
 	}
 
 	pre {
-		min-height: 33px;
+		overflow: visible;
 	}
 }
 
